dataset1235/2025-2/610742602/users/852229192/executions/677928262_3921830315.log
== RUN (2025-08-28 17:33:03)
-- CODE: 
litros_abastecidos = float(input())
preco = litros_abastecidos * 2.86 + 50
servico = preco * (34/100)
total = preco + servico
print(round(total,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:33:08)
-- CODE: 
litros_abastecidos = float(input())
preco = litros_abastecidos * 2.86 + 50
servico = preco * (34/100)
total = preco + servico
print(round(total,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:32:55)
-- CODE: 
litros_abastecidos = float(input())
preco = litros_abastecidos * 2.86 + 50
servico = preco * (34/100)
total = preco + servico
print(round(total,2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    print(round(total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    print(round(total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    print(round(total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    print(round(total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    print(round(total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    print(round(total,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 17:32:36)
-- CODE: 
litros_abastecidos = float(input())
preco = litros_abastecidos * 2.86 + 50
servico = preco * (34/100)
total = preco + servico
print(total)

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.85696
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.846708
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95176000000004
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.9926519999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.56683199999998
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
